argo-problem/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-service
  labels:
    app: golang
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: golang
