argo-problem/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: go-service
spec:
    ingressClassName: nginx
    rules:
    - host: "example.foo"
      http:
        paths:
        - path: "/"
          pathType: Prefix
          backend:
              service:
                name: go-service
                port: 
                  name: http
